Update category model structure
